grammar.js
    source_file: $ => optional(seq(sep1($._statement, ";"), optional(";"))),

    _statement: $ =>
      choice(
        $.begin_statement,
        $.savepoint_statement,
        $.commit_statement,
        $.rollback_statement,
        $.pg_command,

        $.select_statement,
        $.update_statement,
        $.insert_statement,
        $.delete_statement,
        $.set_statement,
        $.grant_statement,
        $.revoke_statement,
        $.alter_default_privileges_statement,
        $.drop_statement,
        $.create_statement,
        $.alter_statement,
        $.truncate_statement,
        $.create_type_statement,
        $.create_domain_statement,
        $.create_table_statement,
        $.create_index_statement,
        $.create_schema_statement,
        $.create_database_statement,
        $.create_role_statement,
        $.create_extension_statement,
        $.create_event_trigger_statement,
        $.create_aggregate_statement,
        $.create_policy_statement,
        $.drop_function_statement,
        $.drop_database_statement,

        // TODO: remove from _statement
        $.return_statement,
        $.declare_statement,

        $.comment_statement,
        $.create_view_statement,
        $.create_materialized_view_statement,
        $.alter_type_statement,
        $.alter_table_statement,
        $.combining_query,
        $.vacuum_statement,
        $.do_statement,
        $.values_clause,
        $.recovery_values_statement,

        $.create_trigger_statement,
        $.create_function_statement,
      ),

    with_clause: $ =>
      seq(kw("WITH"), optional(kw("RECURSIVE")), commaSep1($.cte)),

    cte: $ =>
      seq(
        $.identifier,
        optional(alias($.identifier_list, $.column_list)),
        kw("AS"),
        optional(seq(optional(kw("NOT")), kw("MATERIALIZED"))),
        "(",
        choice(
          $.select_statement,
          $.delete_statement,
          $.insert_statement,
          $.update_statement,
          $.combining_query,
          $.values_clause,
          $.select_subexpression,
        ),
        ")",
      ),

    select_statement: $ => seq(optional($.with_clause), $._select_statement),
    insert_statement: $ => seq(optional($.with_clause), $._insert_statement),
    delete_statement: $ => seq(optional($.with_clause), $._delete_statement),

    index_item: $ =>
      seq(
        choice($._identifier, $.function_call, $._parenthesized_expression),
        optional($.collate),
        optional($.op_class),
        optional($.order),
        optional($.nulls_order),
      ),
    order: $ => choice(kw("ASC"), kw("DESC")),
    _select_statement: $ =>
      prec.right(
        seq(
          $.select_clause,
          optional($.from_clause),
          optional($.where_clause),
          optional($.group_by_clause),
          optional($.window_clause),
          optional($.order_by_clause),
          optional($.limit_clause),
          optional($.offset_clause),
        ),
      ),

    order_expression: $ =>
      seq($._expression, optional($.order), optional($.nulls_order)),
    order_by_clause: $ => seq(kw("ORDER BY"), commaSep1($.order_expression)),
    limit_clause: $ =>
      seq(
        kw("LIMIT"),
        choice($.number, kw("ALL")),
        optional(seq(",", $.number)), // MySQL LIMIT a, b
      ),
    offset_clause: $ =>
      prec.right(
        seq(kw("OFFSET"), $.number, optional(choice(kw("ROW"), kw("ROWS")))),
      ),
    fetch_clause: $ =>
      seq(
        kw("FETCH"),
        choice(kw("FIRST"), kw("NEXT")),
        optional($.number),
        choice(kw("ROW"), kw("ROWS")),
        kw("ONLY"),
      ),
    where_clause: $ => seq(kw("WHERE"), field("condition", $._expression)),
    alias: $ =>
      prec.right(
        choice($.identifier, $.table_and_columns, $.column_definitions, $.string),
      ),
    aliased_expression: $ => seq(field("expression", $._expression), optional(kw("AS")), field("alias", $.alias)),
    _aliasable_expression: $ =>
      prec.right(choice($._expression, $.aliased_expression)),
    select_item: $ =>
      seq(
        $._aliasable_expression,
        optional(seq(kw("INTO"), field("into", $.identifier))),
      ),
    select_clause: $ =>
      prec.right(
        seq(
          kw("SELECT"),
          optional(choice(kw("ALL"), $.distinct_clause)),
          field("items", commaSep($.select_item)),
        ),
      ),
    from_clause: $ => seq(kw("FROM"), field("items", commaSep1($.from_item))),
    from_item: $ =>
      choice(
        seq(
          optional(kw("ONLY")),
          $._aliasable_expression,
          optional($.tablesample_clause),
        ),
        seq("(", $.join_clause, ")"),
        $.join_clause,
      ),
    set_clause: $ => seq(kw("SET"), commaSep1($.assignment_expression)),
    assignment_expression: $ =>
      choice(
        seq(field("left", $._identifier), "=", field("right", $._expression)),
        seq(
          field("left", $.identifier_list),
          "=",
          field("right", choice(
            $.select_subexpression,
            $.row_constructor,
            $.composite_expression,
          )),
        ),
      ),

    // INSERT
    _insert_statement: $ =>
      seq(
        kw("INSERT"),
        kw("INTO"),
        field("table", $._identifier),
        optional(seq(kw("AS"), field("table_alias", $.identifier))),
        optional(field("columns", alias($.identifier_list, $.column_names))),
        optional($.overriding_value),
        choice(
          $.default_values,
          $.values_clause,
          $.select_statement,
          $.set_clause,
        ),
        optional($.on_conflict),
        optional($._returning_clause),
      ),
    overriding_value: $ =>
      seq(kw("OVERRIDING"), choice(kw("SYSTEM"), kw("USER")), kw("VALUE")),
    default_values: $ => kw("DEFAULT VALUES"),
    on_conflict: $ =>
      seq(kw("ON CONFLICT"), optional(field("target", $.conflict_target)), field("action", $.conflict_action)),
    conflict_target: $ =>
      choice(seq($.index_item, optional($.where_clause)), $.on_constraint),
    on_constraint: $ =>
      seq(kw("ON CONSTRAINT"), field("constraint_name", $._identifier)),
    conflict_action: $ => choice($.do_nothing, $.do_update),
    do_nothing: $ => kw("DO NOTHING"),
    do_update: $ =>
      seq(kw("DO UPDATE"), $.set_clause, optional($.where_clause)),
    returning_clause: $ => seq(kw("RETURNING"), field("value", $._aliasable_expression)),
    values_clause: $ =>
      seq(
        kw("VALUES"),
        field("items", commaSep1($.values_item)),
        optional($.order_by_clause),
        optional($.limit_clause),
        optional($.offset_clause),
        optional($.fetch_clause),
      ),
    values_item: $ => choice(
      seq("(", commaSep1(choice($._expression, kw("DEFAULT"))), ")"),
      $.row_constructor,
    ),
    _delete_statement: $ =>
      prec.right(seq(
        kw("DELETE FROM"),
        optional(kw("ONLY")),
        field("table", $._identifier),
        optional("*"),
        optional(seq(optional(kw("AS")), field("table_alias", $.alias))),
        optional($.where_clause),
        optional($._returning_clause),
      )),

    function_call: $ =>
      prec.right(
        1,
        seq(
          optional(kw("LATERAL")),
          field("function", $._identifier),
          "(",
          optional(field("arguments", $._function_call_arguments)),
          ")",
          optional($.with_ordinality),
          optional($.within_group_clause),
          optional($.filter_clause),
          optional($.over_clause),
        ),
      ),
    _function_call_arguments: $ =>
      seq(
        optional(choice(kw("ALL"), kw("DISTINCT"))),
        choice(
          commaSep1(choice($._expression, $.named_argument)),
          $.select_statement
        ),
        optional(seq(kw("FROM"), $._expression)),
        optional(seq(kw("FOR"), $.number)),
        optional(seq(kw("AS"), $._type)),
        optional($.order_by_clause),
      ),
    _parenthesized_expression: $ =>
      prec.left(PREC.unary, seq("(", $._expression, ")")),
    number: $ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent),
            seq(digits),
          ),
        ),
      );
    },

    _unquoted_identifier: $ => /[a-zA-Z0-9_]+/,
    
    _quoted_identifier: $ =>
      token(choice(
        seq("`", field("name", /[^`]*/), "`"), // MySQL style quoting
        seq('"', repeat(choice(
          token.immediate(prec(1, /[^\\"\n]+/)),  // 普通字符
          seq('\\', '"'),                          // 转义的双引号
          '""'
        )), '"'), // ANSI QUOTES
    )),
    identifier: $ => choice($._unquoted_identifier, $._quoted_identifier),
    _identifier: $ => prec(PREC.primary, choice($.identifier, $.dotted_name)),
    string: $ => choice($._single_quoted_string, $._dollar_quoted_string),
    _single_quoted_string: $ => token(seq(
      choice("'", "e'", "E'"),
      field("content", alias(/(''|[^'])*/, $.content)),
      "'"
    )),
    _dollar_quoted_string: $ => seq(
      $._dollar_quoted_string_tag,
      field("content", alias($._dollar_quoted_string_content, $.content)),
      $._dollar_quoted_string_end_tag,
    ),
    type: $ =>
      prec.right(
        seq(
          $._identifier,
          optional(kw("VARYING", 1)), // CHARACTER/BIT VARYING
          optional(kw("PRECISION", 1)), // DOUBLE PRECISION
          optional(seq("(", commaSep1($.number), ")")),
          optional(seq(choice(kw("WITH"), kw("WITHOUT")), kw("TIME ZONE"))), // TIME/TIMESTAMP (n) WITH/WITHOUT TIME ZONE
        ),
      ),
    _type: $ => choice($.type, $.array_type, $.table_type),
    type_cast: $ =>
      seq(
        // TODO: should be moved to basic expression or something
        field("expression", choice(
          $._parenthesized_expression,
          $.string,
          $._identifier,
          $.function_call,
          $.field_selection,
          $.array_constructor,
          $.type_cast,
          $.number,
          $.conditional_expression,
          $.NULL,
          $.TRUE,
          $.FALSE,
          $.UNKNOWN,
        )),
        "::",
        field("type", $._type),
      ),

    binary_expression: $ => {
      const table = [
        [PREC.exp, "^"],
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(
          ...comparative_operators,
          seq(optional(kw("NOT")), choice(
            tok('LIKE'),
            tok('ILIKE'),
            tok("SIMILAR TO"),
            tok("OVERLAPS"),
          ))
        )],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    asterisk_expression: $ => choice("*", seq($._identifier, ".*")),
    _expression: $ => choice($._simple_expression, $.composite_expression),


    //////////////////////////////////// PL/SQL ////////////////////////////////////
