test/corpus/delete.txt
================================================================================
DELETE statement
================================================================================

DELETE FROM foo;
DELETE FROM foo WHERE name = 'bar';

--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (identifier))
  (delete_statement
    (identifier)
    (where_clause
      (binary_expression
        (identifier)
        (string)))))

================================================================================
DELETE with CTE
================================================================================

WITH t AS (
    SELECT * FROM foo
)
DELETE FROM bar;

--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (with_clause
      (cte
        (identifier)
        (select_statement
          (select_clause
            (select_item
              (asterisk_expression)))
          (from_clause
            (from_item
              (identifier))))))
    (identifier)))
